[gd_scene load_steps=11 format=3 uid="uid://dheylospbhkef"]

[ext_resource type="Script" path="res://Scripts/MainMenuController.gd" id="1_a41hu"]
[ext_resource type="PackedScene" uid="uid://c222oad4csdrv" path="res://Scenes/summoning_circle.tscn" id="2_e8kwg"]
[ext_resource type="Texture2D" uid="uid://bu33co6pvdv7f" path="res://Items/chalice.png" id="3_qcskh"]
[ext_resource type="Texture2D" uid="uid://dnqediea5wv8y" path="res://Items/herbs.png" id="4_vfiy5"]
[ext_resource type="Texture2D" uid="uid://n3fsusm51mu4" path="res://Items/crystal.png" id="5_r8w5j"]
[ext_resource type="Texture2D" uid="uid://br78woljwj7ic" path="res://Items/salt.png" id="6_ne7qf"]
[ext_resource type="Texture2D" uid="uid://clqrxmooad3pj" path="res://Images/dagger.png" id="7_77u4u"]

[sub_resource type="Theme" id="Theme_xqskb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ylt2o"]
bg_color = Color(0.129412, 0.129412, 0.129412, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jkbhi"]
bg_color = Color(1, 1, 1, 1)

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_a41hu")

[node name="SummoningCircle" parent="." instance=ExtResource("2_e8kwg")]
position = Vector2(285, 261.5)
scale = Vector2(0.872, 0.822)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 641.0
offset_top = 168.0
offset_right = 897.0
offset_bottom = 572.0
theme_override_constants/separation = 17
alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(256, 40)
layout_mode = 2
theme = SubResource("Theme_xqskb")
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_ylt2o")
theme_override_styles/hover = SubResource("StyleBoxFlat_jkbhi")
text = "Play"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(256, 40)
layout_mode = 2
theme = SubResource("Theme_xqskb")
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_ylt2o")
theme_override_styles/hover = SubResource("StyleBoxFlat_jkbhi")
text = "Options"

[node name="InstructionsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(256, 40)
layout_mode = 2
theme = SubResource("Theme_xqskb")
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_ylt2o")
theme_override_styles/hover = SubResource("StyleBoxFlat_jkbhi")
text = "Instructions"

[node name="SolutionsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(256, 40)
layout_mode = 2
theme = SubResource("Theme_xqskb")
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_ylt2o")
theme_override_styles/hover = SubResource("StyleBoxFlat_jkbhi")
text = "Solutions"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(256, 40)
layout_mode = 2
theme = SubResource("Theme_xqskb")
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_ylt2o")
theme_override_styles/hover = SubResource("StyleBoxFlat_jkbhi")
text = "Credits"

[node name="ExitPlayButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(256, 40)
layout_mode = 2
theme = SubResource("Theme_xqskb")
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_ylt2o")
theme_override_styles/hover = SubResource("StyleBoxFlat_jkbhi")
text = "Exit"

[node name="Label" type="Label" parent="."]
offset_left = 611.0
offset_top = 60.0
offset_right = 915.0
offset_bottom = 99.0
theme_type_variation = &"HeaderLarge"
text = "The Summoning Circle"

[node name="Chalice" type="Sprite2D" parent="."]
position = Vector2(286, 62)
texture = ExtResource("3_qcskh")

[node name="Herbs" type="Sprite2D" parent="."]
position = Vector2(82, 195)
texture = ExtResource("4_vfiy5")

[node name="Crystal" type="Sprite2D" parent="."]
position = Vector2(493, 195)
texture = ExtResource("5_r8w5j")

[node name="Salt" type="Sprite2D" parent="."]
position = Vector2(160, 420)
texture = ExtResource("6_ne7qf")

[node name="Dagger" type="Sprite2D" parent="."]
position = Vector2(410, 420)
texture = ExtResource("7_77u4u")

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/InstructionsButton" to="." method="_on_instructions_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SolutionsButton" to="." method="_on_solutions_button_pressed"]
