[gd_scene load_steps=13 format=3 uid="uid://4f52ayte0o3n"]

[ext_resource type="Script" path="res://Scripts/MainMenuController.gd" id="1_a41hu"]
[ext_resource type="PackedScene" uid="uid://c222oad4csdrv" path="res://Scenes/summoning_circle.tscn" id="2_e8kwg"]
[ext_resource type="FontFile" uid="uid://c234l5ytrif6l" path="res://Fonts/LightStories-V44KZ.ttf" id="3_poou1"]
[ext_resource type="Texture2D" uid="uid://bu33co6pvdv7f" path="res://Items/chalice.png" id="3_qcskh"]
[ext_resource type="Texture2D" uid="uid://dnqediea5wv8y" path="res://Items/herbs.png" id="4_vfiy5"]
[ext_resource type="Texture2D" uid="uid://n3fsusm51mu4" path="res://Items/crystal.png" id="5_r8w5j"]
[ext_resource type="Texture2D" uid="uid://br78woljwj7ic" path="res://Items/salt.png" id="6_ne7qf"]
[ext_resource type="Texture2D" uid="uid://clqrxmooad3pj" path="res://Images/dagger.png" id="7_77u4u"]
[ext_resource type="AudioStream" uid="uid://yafxan127jfu" path="res://Sounds/click.wav" id="8_v5bmq"]

[sub_resource type="Theme" id="Theme_xqskb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ylt2o"]
bg_color = Color(0.129412, 0.129412, 0.129412, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jkbhi"]
bg_color = Color(1, 1, 1, 1)

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_a41hu")

[node name="SummoningCircle" parent="." instance=ExtResource("2_e8kwg")]
position = Vector2(285, 360)
scale = Vector2(0.872, 0.822)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 638.0
offset_top = 124.0
offset_right = 894.0
offset_bottom = 558.0
theme_override_constants/separation = 17
alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(256, 40)
layout_mode = 2
theme = SubResource("Theme_xqskb")
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_ylt2o")
theme_override_styles/hover = SubResource("StyleBoxFlat_jkbhi")
text = "Play Story Mode"

[node name="EndlessPlayButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(256, 40)
layout_mode = 2
theme = SubResource("Theme_xqskb")
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_ylt2o")
theme_override_styles/hover = SubResource("StyleBoxFlat_jkbhi")
text = "Play Endless Mode"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(256, 40)
layout_mode = 2
theme = SubResource("Theme_xqskb")
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_ylt2o")
theme_override_styles/hover = SubResource("StyleBoxFlat_jkbhi")
text = "Options"

[node name="InstructionsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(256, 40)
layout_mode = 2
theme = SubResource("Theme_xqskb")
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_ylt2o")
theme_override_styles/hover = SubResource("StyleBoxFlat_jkbhi")
text = "Book of Instructions"

[node name="SolutionsPlayButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(256, 40)
layout_mode = 2
theme = SubResource("Theme_xqskb")
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_ylt2o")
theme_override_styles/hover = SubResource("StyleBoxFlat_jkbhi")
text = "Book of Solutions"

[node name="CreditsPlayButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(256, 40)
layout_mode = 2
theme = SubResource("Theme_xqskb")
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_ylt2o")
theme_override_styles/hover = SubResource("StyleBoxFlat_jkbhi")
text = "Book of Credits"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(256, 40)
layout_mode = 2
theme = SubResource("Theme_xqskb")
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_ylt2o")
theme_override_styles/hover = SubResource("StyleBoxFlat_jkbhi")
text = "Exit"

[node name="Label" type="Label" parent="."]
offset_left = 101.0
offset_top = 31.0
offset_right = 878.0
offset_bottom = 123.0
theme_type_variation = &"HeaderLarge"
theme_override_fonts/font = ExtResource("3_poou1")
theme_override_font_sizes/font_size = 64
text = "The Summoning Circle"
horizontal_alignment = 1

[node name="Chalice" type="Sprite2D" parent="."]
position = Vector2(287, 155)
texture = ExtResource("3_qcskh")

[node name="Herbs" type="Sprite2D" parent="."]
position = Vector2(82, 293)
texture = ExtResource("4_vfiy5")

[node name="Crystal" type="Sprite2D" parent="."]
position = Vector2(493, 293)
texture = ExtResource("5_r8w5j")

[node name="Salt" type="Sprite2D" parent="."]
position = Vector2(161, 521)
texture = ExtResource("6_ne7qf")

[node name="Dagger" type="Sprite2D" parent="."]
position = Vector2(411, 520)
texture = ExtResource("7_77u4u")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_v5bmq")

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/EndlessPlayButton" to="." method="_on_endless_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/InstructionsButton" to="." method="_on_instructions_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SolutionsPlayButton" to="." method="_on_solutions_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsPlayButton" to="." method="_on_credits_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
